--- a/html/viewer/css/app.css
+++ b/html/viewer/css/app.css
@@ -37,14 +37,15 @@ body {
 }
 
 #headline {
-  font-size: 40px;
+  margin: 0;
+  padding: 20px;
+  font-size: 36px;
   font-weight: 400;
-  padding: 50px 100px;
   background-color: var(--white);
 }
 
 #icon-list {
-  margin: 0 var(--sidebar-width) 0 100px;
+  margin: 20px;
 }
 
 /** icon details **/
@@ -61,6 +62,8 @@ body {
   width: var(--sidebar-width);
   border-left: solid 1px rgba(0, 0, 0, 0.1);
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.08);
+  z-index: 2;
+  overflow-y: auto;
 }
 
 #icon-details header {
@@ -95,13 +98,15 @@ body {
   background-position: center;
   background-size: 16px 16px;
   background-repeat: no-repeat;
-  transition: all 0.1s var(--photon-timing-fuction);
+  transition: background-color 0.3s var(--photon-timing-fuction), transform 0.3s var(--photon-timing-fuction);
   position: absolute;
   top: 24px;
   right: 24px;
   width: 24px;
   height: 24px;
   cursor: pointer;
+  background-color: var(--white);
+  border-radius: 4px;
 }
 
 #icon-details .close-button:hover {
@@ -126,7 +131,7 @@ body {
   padding: 32px 16px 16px;
   text-align: center;
   border: solid 1px rgba(0, 0, 0, 0.1);
-  border-radius: 3px;
+  border-radius: 4px;
 }
 
 #icon-details .preview.light {
@@ -145,7 +150,7 @@ body {
 }
 
 #icon-details .name {
-  padding: 16px 32px;
+  padding: 16px 0;
   text-align: center;
   text-transform: capitalize;
 }
@@ -197,7 +202,7 @@ input:checked + .toggle:before {
   -webkit-font-smoothing: antialiased;
   padding: 12px 24px;
   text-decoration: none;
-  border-radius: 3px;
+  border-radius: 4px;
 }
 
 /** Embed version **/
@@ -222,8 +227,7 @@ input:checked + .toggle:before {
 
 #search-input {
   width: 100%;
-  padding: 15px 100px;
-  margin-bottom: 20px;
+  padding: 16px 24px 16px 48px;
   font-family: inherit;
   font-size: 20px;
   border-width: 0 0 1px 0;
@@ -232,9 +236,10 @@ input:checked + .toggle:before {
   position: sticky;
   top: 50px;
   background-image: url(../../icons/new/search-16.svg);
-  background-position: calc((100px - 16px) / 2) center;
+  background-position: 20px center;
   background-repeat: no-repeat;
   color: var(--grey-90);
+  z-index: 1;
 }
 
 #search-input.filled {
@@ -253,8 +258,7 @@ input:checked + .toggle:before {
   color: var(--grey-70);
   display: block;
   font-weight: 400;
-  font-size: 16px;
-  margin-bottom: 15px;
+  font-size: 20px;
   text-transform: capitalize;
 }
 
@@ -268,16 +272,24 @@ input:checked + .toggle:before {
 
 .icon-display {
   display: inline-block;
-  padding: 10px 5px;
+  padding: 16px 8px;
   text-align: center;
-  width: 70px;
-  height: 75px;
+  width: 84px;
+  margin: 4px;
   vertical-align: top;
-  transition: background 0.1s, color 0.1s;
+  transition: transform 0.3s;
   cursor: pointer;
   color: inherit;
   text-decoration: none;
-  margin-right: 2px;
+  border-radius: 4px;
+  background: var(--grey-10);
+  transition: background-color 0.3s var(--photon-timing-fuction), transform 0.3s var(--photon-timing-fuction);
+}
+
+@media screen and (min-width: 768px) {
+  .icon-display {
+    width: 96px;
+  }
 }
 
 .icon-display:hover,
@@ -286,19 +298,14 @@ input:checked + .toggle:before {
 }
 
 .icon-display:active {
-  background-color: var(--blue-50);
-  color: var(--white);
-}
-
-.icon-display:active img {
-  -webkit-filter: contrast(0) brightness(200%);
-  filter: contrast(0) brightness(200%);
+  transform: scale(1.1);
 }
 
 .icon-display img {
-  transition: filter 0.1s;
-  max-width: 16px;
-  max-height: 16px;
+  transition: filter 0.3s;
+  width: 32px;
+  height: 32px;
+  margin-bottom: 8px;
   -webkit-user-select: none;
   -moz-user-select: none;
   user-select: none;
@@ -310,4 +317,8 @@ input:checked + .toggle:before {
   display: block;
   width: 100%;
   -moz-user-select: text;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-transform: capitalize;
 }
