--- a/html/viewer/css/app.css
+++ b/html/viewer/css/app.css
@@ -131,6 +131,7 @@ body {
   padding: 32px 16px 16px;
   text-align: center;
   border: solid 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 4px rgba(9, 6, 12, 0.1);
   border-radius: 4px;
 }
 
